# floorcast

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  settings.py  tach.toml
.github/workflows/: ci.yml  deploy.yml
floorcast/: config.py  db.py  enrichment.py  filtering.py  ha_protocol.py  ingest.py  logging.py  models.py  protocol.py  repository.py  server.py  snapshot_service.py  websocket.py
floorcast/adapters/: home_assistant.py
floorcast/api/: app_state.py  dependencies.py  factories.py  routes.py  state.py  subscriber.py  subscriptions.py
floorcast/common/: aio.py
floorcast/domain/: event_filtering.py  events.py  filtering.py  models.py  ports.py  snapshot_policies.py  websocket.py
floorcast/infrastructure/: backoff.py  config.py  db.py  event_bus.py  logging.py
floorcast/repositories/: event.py  snapshot.py
floorcast/services/: enrichment.py  ingestion.py  registry.py  snapshot.py  snapshot_manager.py  state.py  websocket.py
frontend/: .gitignore  vite.config.ts
frontend/src/: App.css  App.tsx  types.ts
migrations/: env.py
migrations/versions/: 001_initial.py  002_add_unit_to_event_table.py  003_backfill_units.py  004_add_composite_timestamp_id_index.py  005_fix_timestamp_format.py
scripts/: mermaid_layers.py
tests/: conftest.py
tests/adapters/: test_home_assistant.py
tests/api/: test_subscriptions.py
tests/common/: test_aio.py
tests/domain/: test_filtering.py  test_models.py  test_snapshot_policies.py
tests/infrastructure/: test_config.py  test_db.py  (+1 more)
(+9 files in other folders)
